# git-queue

./: Cargo.toml  README.md  shell.nix
git-queue/: Cargo.toml
git-queue/src/: ctx.rs  error.rs  gpg.rs  lib.rs  queue.rs
git-queue/src/queue/: log.rs  patch.rs
src/: commands.rs  error.rs  git.rs  main.rs  table.rs
src/commands/: close.rs  init.rs  queues.rs  switch.rs
