[package]
name = "git-queue"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.20"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tempfile = "3.2.0"
tracing = "0.1.26"
